      that exception.  This would yield minimally configure tests using TryLink() not running and
      leaving TypeError Nonetype exception in config.log
    - Fix Issue #3303 - Handle --config=force overwriting the Environment passed into Configure()'s
      Decider and not clearing it when the configure context is completed.

  From Daniel Moody:
    - Change the default for AppendENVPath to delete_existing=0, so path
      order will not be changed, unless explicitly set (Issue #3276)
    - Fixed bug which threw error when running SCons on windows system with no MSVC installed.
    - Update link tool to convert target to node before accessing node member
    - Update mingw tool to remove MSVC like nologo CCFLAG
    - Add default paths for lex tool on windows
    - Add lex construction variable LEXUNISTD for turning off unix headers on windows
    - Update lex tool to use win_flex on windows if available

  From Mats Wichmann:
    - Quiet open file ResourceWarnings on Python >= 3.6 caused by
      not using a context manager around Popen.stdout
    - Add the textfile tool to the default tool list
    - Fix syntax on is/is not clauses: should not use with a literal

  From Bernhard M. Wiedemann:
    - Do not store build host+user name if reproducible builds are wanted


RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000

  From Mats Wichmann:
    - Improve finding of Microsoft compiler: add a 'products' wildcard
      in case 2017 Build Tools only is installed as it is considered a separate
      product from the default Visual Studio
    - Add TEMPFILESUFFIX to allow a customizable filename extension, as
      described in the patch attached to issue #2431.
    - Doc updates around Default(), and the various *TARGETS variables.

  From Daniel Moody:
    - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
      Issues #3268 & Issue #3222