@@ -34,12 +34,13 @@ _exe = TestSCons._exe
 
 test = TestSCons.TestSCons()
 
-yacc = test.where_is('yacc') or test.where_is('bison')
+yacc = test.where_is('yacc') or test.where_is('bison') or test.where_is('win_bison')
 
 if not yacc:
     test.skip_test('No yacc or bison found; skipping test.\n')
 
 test.write('SConstruct', """
+DefaultEnvironment(tools=[])
 foo = Environment(YACCFLAGS='-v -d', tools = ['default', 'yacc'])
 foo.CFile(source = 'foo.y')
 """ % locals())
